Resolved cart amount bubble viewing issue on mobile devices

--- a/style/style.css
+++ b/style/style.css
@@ -41,10 +41,10 @@
 }
 .cart-amount{
   position:absolute;
-  margin-left:10px;
+  margin-left:30px;
   color:white;
   background-color:hsl(26, 100%, 55%);
-  padding:1px 10px 1px 10px;
+  padding:1px 8px 1px 8px;
   border-radius:20px;
   font-size:8px;
   font-family: "Kumbh Sans", sans-serif;
@@ -215,6 +215,18 @@ main{
     padding-right: 20px;
     padding-bottom: 40px;
     border-bottom: 3px solid transparent;
+  }
+  .cart-amount{
+    position:absolute;
+    margin-left:10px;
+    color:white;
+    background-color:hsl(26, 100%, 55%);
+    padding:1px 10px 1px 10px;
+    border-radius:20px;
+    font-size:8px;
+    font-family: "Kumbh Sans", sans-serif;
+    font-weight:00 !important;
+    z-index:5;
   }
   .cart-logo {
     position: relative;
